# morph

./: .gitattributes  CMakeLists.txt  LICENSE  Packaging.cmake  README.md  morph.desktop  resources.qrc
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/core/: Application.cpp  Application.h  MprisManager.cpp  MprisManager.h  MprisPlayerAdaptor.cpp  MprisPlayerAdaptor.h  MprisRootAdaptor.h  ServiceManager.cpp  ServiceManager.h
src/network/: NetworkManager.cpp  NetworkManager.h
src/services/: BaseService.h  SoundCloudService.cpp  SoundCloudService.h  TrackData.h  YandexService.cpp  YandexService.h  YouTubeService.cpp  YouTubeService.h
src/settings/: HistoryManager.cpp  HistoryManager.h  PlaylistManager.cpp  PlaylistManager.h  SettingsManager.cpp  SettingsManager.h  StyleManager.cpp  StyleManager.h  TokenManager.cpp  TokenManager.h
src/utils/: CacheManager.cpp  CacheManager.h  CryptoUtils.cpp  CryptoUtils.h  DiscordManager.cpp  DiscordManager.h  FileWatcher.cpp  FileWatcher.h  PathProvider.cpp  PathProvider.h  QmlHighlighter.cpp  QmlHighlighter.h
ui/: auto_theme.qml  style.qml  style_white.qml
